<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/write_your_comment"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimaryLight"
        android:ems="10"
        android:hint="@string/displayed_name"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="start|top"
        android:hint="@string/comment_txt"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLines="5" />

    <Button
        android:id="@+id/postComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/search_layout"
        android:backgroundTint="@color/colorPrimaryLight"
        android:text="@string/post_comment"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>