<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"/>
        <ImageView
            android:id="@+id/image_view_upload"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:textSize="12sp"
                android:text="@string/people_rating"
                android:layout_gravity="center_vertical"/>

            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyleSmall"
                android:numStars="5"
                android:stepSize="0.1"
                android:isIndicator="true"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/explore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/explore"
                android:paddingStart="10dp"
                android:layout_gravity="center_vertical"/>
            <RadioGroup android:id="@+id/toggleGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">
                <ToggleButton
                    android:id="@+id/toggle_favorite"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:textOn=""
                    android:textOff=""
                    android:background="@drawable/toggle_button"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center_vertical"/>

            </RadioGroup>


        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
